--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <a href="https://github.com/oohelll"><img src="./Src/Img/Github.png" alt="Github"
                             class="image-media" id="Github"></a>
                     <a href="https://www.linkedin.com/in/azhrael-febriansyah-338499211/"><img
-                            src="./Src/Img/linkedin.png" alt="linkedin" class="image-media linkedin" id="linkedin"></a>
+                            src="./Src/Img/Linkedin.png" alt="linkedin" class="image-media linkedin" id="linkedin"></a>
                 </div>
             </div>
         </div>
